fix: spacing on TOC

--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -50,5 +50,3 @@
     text-align: center;
     justify-content: center;
 }
-
-@media screen and ()
